<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/profile_tab_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_profile_tab_start_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        
        <TextView
            android:id="@+id/user_profile_tab_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_profile_name_title" />
        
        <TextView
            android:id="@+id/user_profile_tab_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_profile_email_title" />
        <Switch
            android:id="@+id/user_profile_broadcast_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_profile_broadcast_location" />
        
    </LinearLayout>
    

</ScrollView>